<resources>
    <string name="app_name">Git Notes</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Close</string>
    <string name="action_about">About Git Notes</string>
    <string name="action_github">Github</string>
    <string name="folder">Folder</string>
    <string name="my_notes">My Notes</string>
    <string name="title_reponame">Repo Name</string>
    <string name="btn_update">Update</string>
    <string name="title_about">About</string>
    <string name="title_settings">Settings</string>
    <string name="title_home">My Notes</string>
    <string name="btn_reset_repo">Reset to Default</string>
    <string name="title_repousername">User Name</string>
</resources>
