<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
                android:id="@+id/nav_mynotes"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/my_notes" />
    </group>

    <group>
        <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/action_settings" />
        <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/action_about" />
        <item
                android:id="@+id/nav_github"
                android:icon="@drawable/ic_github_icon"
                android:title="@string/action_github" />
    </group>
</menu>