<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_repo_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_repousername"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_repo_username_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_repo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_reponame"
        app:layout_constraintTop_toBottomOf="@id/edit_repo_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_repo_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_update"
        android:text="@string/btn_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/edit_repo"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="40dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_reset"
        android:text="@string/btn_reset_repo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_repo"
        android:layout_marginEnd="40dp" />

</androidx.constraintlayout.widget.ConstraintLayout>